# gradient-tool

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  ui.html
src/: main.rs
