[package]
name = "gradient-tool"
version = "0.0.1"
authors = ["Zachary Catlin <z@zc.is>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "^0.7"
webbrowser = "^0.5"

[build-dependencies]
urlencoding = "^1.1"
